rendered/envs/alpha/uptime-kuma/deployment-uptime-kuma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: uptime-kuma
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: uptime-kuma
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uptime-kuma
    spec:
      containers:
        - env:
            - name: UPTIME_KUMA_DISABLE_IPV6
              value: "1"
          image: index.docker.io/louislam/uptime-kuma@sha256:c74379ac4509ce2d2c2633f509e67003ee2e45b6e995c5e43fc101f45a0e1fbe
          name: uptime-kuma
          ports:
            - containerPort: 3001
              name: http
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 30m
              memory: 192Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - CHOWN
                - NET_BIND_SERVICE
                - NET_RAW
                - SETGID
                - SETUID
              drop:
                - all
            privileged: false
          volumeMounts:
            - mountPath: /app/data
              name: data
      enableServiceLinks: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
