rendered/envs/alpha/uptime-kuma/service-uptime-kuma.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  labels:
    app.kubernetes.io/name: uptime-kuma
  name: uptime-kuma
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: uptime-kuma
