rendered/envs/alpha/uptime-kuma/ingressroute-uptime-kuma-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: uptime-kuma-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`uptime-kuma.lan.zebradil.dev`) || Host(`uptime-kuma.junior.lan.zebradil.dev`) || Host(`uptime-kuma.zebradil.dev`) || Host(`uptime-kuma.junior.zebradil.dev`)
      services:
        - name: uptime-kuma
          port: http
